--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
         <item>Statusbar Battery</item>
         <item>Statusbar Signal</item>
         <item>Custom backlight Settings</item>
+        <item>Statusbar</item>
     </string-array>
 
 
